service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nwtapp-service
  labels:
    run: nwtapp
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    protocol: TCP
  selector:
    run: nwtapp
